--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_NO_WARNINGS=1 next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,12 +17,14 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.2",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "lucide-react": "^0.331.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "next-cloudinary": "^6.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -32,6 +34,9 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.11",
+    "@types/multiparty": "^0.0.36",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
