--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
