--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_NO_WARNINGS=1 next dev ",
+    "dev": "NODE_NO_WARNINGS=1 next dev  ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -59,6 +59,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "next-videos": "^1.4.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
