--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "ai": "^3.0.24",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "next-auth": "^4.24.6",
     "next-cloudinary": "^6.0.1",
     "next-themes": "^0.2.1",
+    "openai": "^4.38.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
